--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "backend-sdk",
   "module": "index.ts",
-  "type": "module",
   "devDependencies": {
     "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "type": "module",
+  "dependencies": {
+    "@irys/sdk": "^0.1.1"
   }
 }
