--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend-sdk",
   "module": "index.ts",
   "devDependencies": {
+    "@irys/sdk": "^0.1.1",
     "bun-types": "latest"
   },
   "peerDependencies": {
